fixed catalogue page on mobile 2

--- a/styles/style.css
+++ b/styles/style.css
@@ -4173,6 +4173,29 @@ body {
 .product-list {
   flex: 1; }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; }
+  .pagination li {
+    padding: 2px 10px;
+    background: #0eaf94;
+    margin-right: 10px;
+    display: none; }
+    .pagination li:nth-of-type(1) {
+      display: block; }
+    .pagination li:nth-of-type(2) {
+      display: block; }
+    .pagination li:nth-of-type(3) {
+      display: block; }
+    .pagination li:nth-of-type(4) {
+      display: block; }
+    .pagination li:nth-of-type(5) {
+      display: block; }
+    .pagination li a {
+      font-size: 2rem;
+      color: #fff; }
+
 @media only screen and (max-width: 1024px) {
   .custom-select {
     max-width: 200px;
